# BrainVolve

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt
include/neural/: activationfuncs.hpp  network.hpp  neuron.hpp
src/: CMakeLists.txt  animal.cpp  animal.hpp  brain.cpp  brain.hpp  environment.cpp  environment.hpp  objects.cpp  objects.hpp  parser.cpp  parser.hpp  simulator.cpp  simulator.hpp
src/neural/: CMakeLists.txt  activationfuncs.cpp  network.cpp  neuron.cpp
tests/: CMakeLists.txt  brain.cpp  parser.cpp
tests/neural/: CMakeLists.txt  network.cpp  neuron.cpp
